--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 @charset "UTF-8";
 
-@import url(https://fonts.googleapis.com/css?family=Inter:,regular,500);
+@import url(https://fonts.googleapis.com/css?family=Inter:,regular,500,600);
+
+@font-face {
+    font-family: "Gilroy";
+  font-weight: 600;
+  src: url(fonts/Gilroy-Semibold.ttf);
+}
 /* Указываем box sizing */
 *,
 *::before,
@@ -70,42 +76,17 @@ select {
 }
 
 .section__h3__tittle {
-    font-size: 38px;
-    font-weight: 700;
-    line-height: 48px;
-    letter-spacing: 0.05em;
-    text-align: center;
-    position: relative;
-    z-index: 2;
+    font-family: Gilroy;
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 53px;
+    letter-spacing: 0em;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 540px) {
     .section__h3__tittle {
-        font-size: 22px;
-        font-weight: 500;
-        line-height: 28px;
-        letter-spacing: 0em;
+        font-size: 30px;
     }
-}
-
-.section__info__text {
-    font-size: 20px;
-    font-weight: 500;
-    line-height: 25px;
-    letter-spacing: 0.1em;
-    color: #FFF;
-    opacity: 0.7;
-}
-
-.text-block__link {
-    font-size: 12px;
-    font-weight: 800;
-    line-height: 12px;
-    letter-spacing: 0.14em;
-    color: #FFF;
-    background-color: #EC5863;
-    padding: 14px 30px;
-    border-radius: 5px;
 }
 
 .noscroll {
@@ -146,10 +127,51 @@ select {
     flex-wrap: wrap;
 }
 
+.header .header__menu .menu__link {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+}
+
+@media (max-width: 1000px) {
+    .header .header__menu .menu__link {
+        color: #FFF;
+    }
+}
+
+.header .header__menu .menu__link:hover {
+    color: #00A9F2;
+}
+
 @media (max-width: 1000px) {
     .header .header__menu {
         display: none;
+        position: absolute;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        gap: 40px;
+        width: 100%;
+        height: 100%;
+        top: 0;
+        left: 0;
+        z-index: 3;
+        background-color: rgba(0, 0, 0, 0.9058823529);
     }
+
+    .header .header__menu.active {
+        display: flex;
+    }
+}
+
+.header .menu__item {
+    position: relative;
+    padding: 10px 0;
+}
+
+.header .menu__item:hover .item__sub__menu {
+    display: flex;
 }
 
 .header .menu__arrow {
@@ -157,19 +179,27 @@ select {
     cursor: pointer;
 }
 
-.header .menu__link {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 16px;
-    letter-spacing: 0em;
+.header .item__sub__menu {
+    width: auto;
+    height: auto;
+    padding: 21px;
+    background: rgb(255, 255, 255);
+    box-shadow: 0px 0px 10px rgba(40, 40, 40, 0.15);
+    border-radius: 14px;
+    position: absolute;
+    z-index: 2;
+    top: 38px;
+    row-gap: 20px;
+    flex-direction: column;
+    display: none;
 }
 
-.header .item__sub__menu {
-    width: 100px;
-    height: 100px;
-    background: rgba(136, 136, 136, 0.1);
-    position: absolute;
-    display: none;
+.header .sub__menu__item .sub-menu__link {
+    white-space: nowrap;
+}
+
+.header .sub__menu__item .sub-menu__link:hover {
+    color: #00A9F2;
 }
 
 .header .links__block {
@@ -187,6 +217,7 @@ select {
 
 .header .order__link {
     margin-right: 22px;
+    color: #00A9F2;
 }
 
 .header .header__second__column {
@@ -212,6 +243,7 @@ select {
 }
 
 .header .catalog__block .burger__menu {
+    z-index: 1;
     width: 22px;
     height: 12px;
     display: flex;
@@ -276,26 +308,45 @@ select {
     display: none;
 }
 
+.header .burger__menu .burger__menu__field {
+    width: 40px;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.header .burger__menu .burger__menu__field .bar {
+    transition: all 0.3s;
+    width: 100%;
+    height: 3px;
+    border-radius: 8px;
+    background-color: #282828;
+}
+
 @media (max-width: 1000px) {
     .header .burger__menu {
+        position: relative;
+        z-index: 3;
         display: block;
         width: 40px;
         height: 30px;
     }
 
-    .header .burger__menu .burger__menu__field {
-        width: 40px;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
+    .header .burger__menu.active .bar {
+        background-color: #FFF;
     }
 
-    .header .burger__menu .burger__menu__field span {
-        width: 100%;
-        height: 3px;
-        border-radius: 8px;
-        background-color: #282828;
+    .header .burger__menu.active .bar:nth-child(1) {
+        transform: translateY(10px) rotate(45deg);
+    }
+
+    .header .burger__menu.active .bar:nth-child(2) {
+        opacity: 0;
+    }
+
+    .header .burger__menu.active .bar:nth-child(3) {
+        transform: translateY(-10px) rotate(-45deg);
     }
 }
 
@@ -494,11 +545,11 @@ select {
     border-radius: 50%;
 }
 
-.IndustrySolutions__section .section__tittle {
-    font-size: 48px;
-    font-weight: 600;
-    line-height: 53px;
-    letter-spacing: 0em;
+.IndustrySolutions__section {
+    margin-bottom: 100px;
+}
+
+.IndustrySolutions__section .section__h3__tittle {
     margin-bottom: 30px;
 }
 
@@ -630,7 +681,636 @@ select {
     color: #00A9F2;
 }
 
+.Advantages__section {
+    background: #F5F5F5;
+    background-image: url(images/Vector.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding-top: 50px;
+    padding-bottom: 80px;
+}
+
+@media (max-width: 550px) {
+    .Advantages__section {
+        padding: 20px 0 30px 0;
+    }
+}
+
+.Advantages__section .section__h3__tittle {
+    margin-bottom: 60px;
+}
+
+.Advantages__section .section__column {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    row-gap: 50px;
+    -moz-column-gap: 80px;
+    column-gap: 80px;
+}
+
+@media (max-width: 1000px) {
+    .Advantages__section .section__column {
+        -moz-column-gap: 40px;
+        column-gap: 40px;
+    }
+}
+
+@media (max-width: 800px) {
+    .Advantages__section .section__column {
+        grid-template-columns: 1fr;
+    }
+}
+
+.Advantages__section .column__item {
+    max-width: 536px;
+    min-height: 167px;
+    background-color: #FFFFFF;
+    padding: 28px;
+    border-radius: 8px;
+    display: flex;
+    align-items: flex-start;
+}
+
+@media (max-width: 1000px) {
+    .Advantages__section .column__item {
+        padding: 15px;
+    }
+}
+
+.Advantages__section .column__item p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 26px;
+    letter-spacing: 0em;
+    opacity: 0.5;
+}
+
+@media (max-width: 500px) {
+    .Advantages__section .column__item p {
+        font-size: 12px;
+        line-height: normal;
+    }
+}
+
+.Advantages__section .item__icon {
+    width: 60px;
+    margin-right: 30px;
+    margin-top: 3px;
+}
+
+@media (max-width: 500px) {
+    .Advantages__section .item__icon {
+        width: 40px;
+    }
+}
+
+.Advantages__section .item__tittle {
+    font-family: Gilroy;
+    font-size: 24px;
+    font-weight: 600;
+    line-height: 34px;
+    letter-spacing: 0em;
+    text-align: left;
+    margin-bottom: 5px;
+}
+
+@media (max-width: 500px) {
+    .Advantages__section .item__tittle {
+        font-size: 20px;
+    }
+}
+
+.Catalog__products__section {
+    padding: 80px 0;
+}
+
+.Catalog__products__section .section__h3__tittle {
+    font-size: 48px;
+    font-weight: 600;
+    line-height: 53px;
+    letter-spacing: 0em;
+    margin-bottom: 45px;
+}
+
+.Catalog__products__section .tab__buttons {
+    margin-bottom: 50px;
+}
+
+.Catalog__products__section .tab__item {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    padding: 16px 16px;
+    border: 1px solid rgba(0, 0, 0, 0.137254902);
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+@media (max-width: 600px) {
+    .Catalog__products__section .tab__item {
+        font-size: 14px;
+    }
+}
+
+.Catalog__products__section .tab__item:hover {
+    opacity: 0.8;
+}
+
+.Catalog__products__section .tab__item.active {
+    color: #00A9F2;
+    border-color: #00A9F2;
+}
+
+.Catalog__products__section .catalog__swiper {
+    width: 100%;
+    min-height: 690px;
+}
+
+.Catalog__products__section .slide__item__column {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    -moz-column-gap: 22px;
+    column-gap: 22px;
+    row-gap: 30px;
+}
+
+.Catalog__products__section .column__item {
+    border: 1px solid #DADADA;
+    border-radius: 8px;
+    padding: 30px;
+}
+
+.Catalog__products__section .item__image {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+
+.Catalog__products__section .artikul {
+    margin-bottom: 5px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 13px;
+    letter-spacing: 0px;
+    color: rgba(40, 40, 40, 0.3);
+}
+
+.Catalog__products__section .product__tittle {
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0px;
+    margin-bottom: 13px;
+}
+
+.Catalog__products__section .previous-price {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 140%;
+    text-decoration-line: line-through;
+    color: #FF1530;
+}
+
+.Catalog__products__section .current-price {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 28px;
+    line-height: 140%;
+    margin-bottom: 35px;
+}
+
+.Catalog__products__section .more__about__link {
+    display: block;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 0em;
+    background: #00A9F2;
+    border-radius: 8px;
+    padding: 13px;
+    margin-bottom: 30px;
+}
+
+.Catalog__products__section .submit-application-link {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 16px;
+    letter-spacing: 0em;
+    display: block;
+    text-align: center;
+}
+
+.Catalog__products__section .swiper .swiper-button-next, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+    position: absolute;
+    top: 20px;
+}
+
+@media (max-width: 710px) {
+    .Catalog__products__section .swiper .swiper-button-next, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+        top: 60px;
+    }
+}
+
+.Catalog__products__section .swiper .swiper-button-prev, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+    left: var(--swiper-navigation-sides-offset, 89%);
+    top: var(--swiper-navigation-top-offset, 20px);
+}
+
+@media (max-width: 1088px) {
+    .Catalog__products__section .swiper .swiper-button-prev, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+        left: var(--swiper-navigation-sides-offset, 87%);
+        top: var(--swiper-navigation-top-offset, 20px);
+    }
+}
+
+@media (max-width: 910px) {
+    .Catalog__products__section .swiper .swiper-button-prev, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+        left: var(--swiper-navigation-sides-offset, 83%);
+    }
+}
+
+@media (max-width: 710px) {
+    .Catalog__products__section .swiper .swiper-button-prev, .Catalog__products__section .Rates__section .swiper .swiper-rtl .swiper-button-next {
+        left: var(--swiper-navigation-sides-offset, 72%);
+        top: var(--swiper-navigation-top-offset, 60px);
+    }
+}
+
+.Catalog__products__section .swiper-pagination {
+    display: none;
+}
+
+.project__calculation {
+    background: #F5F5F5;
+    padding: 53px 0 70px 0;
+    background-image: url(images/Vector.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.project__calculation .section__body {
+    display: flex;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    -moz-column-gap: 117px;
+    column-gap: 117px;
+}
+
+.project__calculation .section__img {
+    max-width: 542px;
+}
+
+.project__calculation .section__img img {
+    width: 100%;
+}
+
+.project__calculation .form__block {
+    max-width: 388px;
+}
+
+@media (max-width: 1080px) {
+    .project__calculation .form__block {
+        max-width: 688px;
+    }
+}
+
+.project__calculation .section__h3__tittle {
+    margin-bottom: 33px;
+}
+
+.project__calculation .number__form {
+    width: 100%;
+    height: 58px;
+    margin-bottom: 25px;
+    position: relative;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
+.project__calculation .number__form form {
+    height: 100%;
+}
+
+.project__calculation .number__form input {
+    width: 100%;
+    height: 100%;
+    padding-left: 15px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+.project__calculation .product__form {
+    width: 100%;
+    height: 58px;
+    margin-bottom: 25px;
+    position: relative;
+    background-color: #ffffff;
+    border-radius: 8px;
+}
+
+.project__calculation .product__form form {
+    height: 100%;
+}
+
+.project__calculation .product__form input {
+    width: 100%;
+    height: 100%;
+    padding-left: 15px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+.project__calculation .submit-application-link {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 0em;
+    color: #FFF;
+    background: #00A9F2;
+    border-radius: 8px;
+    padding: 18px 30px;
+    display: block;
+}
+
+.project__calculation .link {
+    display: flex;
+    align-items: center;
+    -moz-column-gap: 16px;
+    column-gap: 16px;
+    row-gap: 10px;
+    flex-wrap: wrap;
+}
+
+.project__calculation .link p {
+    width: 160px;
+    font-size: 12px;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0em;
+    color: rgba(40, 40, 40, 0.5);
+}
+
+.our__clients {
+    padding: 60px 0 100px 0;
+}
+
+.our__clients .section__h3__tittle {
+    margin-bottom: 50px;
+}
+
+.our__clients .tab__buttons {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+    margin-bottom: 50px;
+    row-gap: 20px;
+}
+
+.our__clients .tab__button__item {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 16px;
+    letter-spacing: 0em;
+    padding: 16px 16px;
+    border: 1px solid rgba(0, 0, 0, 0.137254902);
+    background-color: #FFFFFF;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: all 0.3s;
+}
+
+@media (max-width: 600px) {
+    .our__clients .tab__button__item {
+        font-size: 14px;
+    }
+}
+
+.our__clients .tab__button__item:hover {
+    opacity: 0.8;
+}
+
+.our__clients .tab__button__item.active {
+    color: #00A9F2;
+    border-color: #00A9F2;
+}
+
+.our__clients .content__item {
+    display: none;
+}
+
+.our__clients .content__item.active {
+    display: block;
+}
+
+.our__clients .item__column {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    row-gap: 40px;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
+}
+
+.our__clients .column__item {
+    width: 260px;
+    height: 150px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #DADADA;
+    border-radius: 8px;
+}
+
+.press__center {
+    padding: 50px 0 100px 0;
+    background: #F5F5F5;
+    background-image: url(images/Vector.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.press__center .section__h3__tittle {
+    margin-bottom: 50px;
+}
+
+.press__center .section__column {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    gap: 40px;
+    row-gap: 60px;
+}
+
+@media (max-width: 1200px) {
+    .press__center .section__column {
+        justify-content: center;
+    }
+}
+
+.press__center .column__item {
+    max-width: 350px;
+}
+
+.press__center .item__img {
+    max-width: 350px;
+    margin-bottom: 30px;
+}
+
+.press__center .item__img img {
+    width: 100%;
+}
+
+.press__center .item__tittle {
+    font-size: 18px;
+    font-weight: 600;
+    line-height: 25px;
+    letter-spacing: 0em;
+    margin-bottom: 9px;
+}
+
+.press__center .news {
+    margin-bottom: 30px;
+    display: flex;
+    -moz-column-gap: 10px;
+    column-gap: 10px;
+}
+
+.press__center .news p {
+    color: #555555;
+}
+
+.press__center .news span {
+    color: #555555;
+    opacity: 0.3;
+}
+
+.press__center .more__about__link {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 22px;
+    letter-spacing: 0em;
+    color: #FFF;
+    background: #00A9F2;
+    border-radius: 8px;
+    padding: 13px 50px;
+}
+
 /* _______________________________________________________________________________________________- */
 .footer {
-    margin-top: 500px;
+    background: #282828;
+    padding: 50px 0 20px 0;
+}
+
+.footer a {
+    color: #F5F5F5;
+}
+
+.footer .footer__top {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 122px;
+}
+
+.footer .footer__arrow__link {
+    background: rgba(136, 136, 136, 0.1);
+    border-radius: 10.2857px;
+    padding: 10px 12px 12px 12px;
+}
+
+.footer .footer__column {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    flex-wrap: wrap;
+    -moz-column-gap: 20px;
+    column-gap: 20px;
+    row-gap: 40px;
+    margin-bottom: 146px;
+}
+
+.footer .footer__menu {
+    max-width: 250px;
+}
+
+.footer .menu__item {
+    margin-bottom: 10px;
+}
+
+.footer .menu__tittle__item {
+    margin-bottom: 20px;
+}
+
+.footer .menu__tittle__link {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
+    margin-bottom: 20px;
+}
+
+.footer .menu__link {
+    font-size: 15px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0em;
+    color: #e4e4e4;
+}
+
+.footer .solial__links {
+    display: flex;
+    align-items: center;
+    -moz-column-gap: 10px;
+    column-gap: 10px;
+}
+
+.footer .solial__links a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(136, 136, 136, 0.1);
+    border-radius: 8px;
+    width: 40px;
+    height: 40px;
+}
+
+.footer .footer__bottom {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.footer .rotosnab {
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    color: #e4e4e4;
+}
+
+.footer .links {
+    display: flex;
+    -moz-column-gap: 30px;
+    column-gap: 30px;
+}
+
+.footer .links a {
+    color: #e4e4e4;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 21px;
+    letter-spacing: 0em;
+    text-align: left;
 }
